[package]
name = "linux_once"
version = "0.1.1"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"
description = "A Linux-optimized drop-in replacement for std::sync::Once"
repository = "https://github.com/Kixunil/linux_once"
license = "MITNFA"
readme = "README.md"
keywords = ["linux", "run-once", "call-once", "once", "futex"]
categories = ["concurrency", "os::linux-apis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Used for testing only, do NOT depend on this!
bench = []

[target.'cfg(target_os = "linux")'.dependencies]
linux-futex = "0.1.1"
